# typeless-ibus

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README_zh.md  THIRD_PARTY.md  flake.nix  index.html  package-lock.json  package.json  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  pages.yml
data/: config.example.json  config.llm.example.json  typeless-settings.desktop  typeless.xml
docs/: README.md  THIRD_PARTY.md  architecture.md  asr-providers.md  development.md  distributions.md  index.md  installation.md  languages.md  logging.md  privacy.md  troubleshooting.md  usage.md
docs/asr/: README.md  alibaba-bailian.md  doubao.md  elevenlabs.md  groq.md  openai-compatible.md  openai.md  openrouter.md  siliconflow.md  volcengine.md  xiaomi-mimo.md  zhipu.md
docs/llm/: README.md  anthropic.md  deepseek.md  doubao.md  gemini.md  groq.md  moonshot.md  openai-compatible.md  openai.md  openrouter.md  qwen.md  siliconflow.md  zhipu.md
packaging/: Dockerfile.build  build-rpm.sh  build-website.sh  ibus-user.conf.in  install-user.sh  postrm  typeless-ibus.spec  uninstall-user.sh
scripts/: build.py  launcher.py
src/: App.tsx  Capsule.tsx  asr.rs  audio.rs  config.rs  engine.rs  i18n.rs  ibus.rs  lib.rs  logging.rs  main.rs  main.tsx  properties.rs  settings.rs  styles.css  system_preferences.rs  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: asr.rs  audio.rs  config.rs  lib.rs  main.rs  output.rs
src/asr/: bailian_realtime.rs  cloud_batch.rs  openai_compatible.rs  provider.rs  shared.rs  volcengine.rs  volcengine_frame.rs
src/llm/: anthropic.rs  mod.rs  openai_compatible.rs  provider.rs
src/typeless_asr/: __init__.py  __main__.py  app.py  config.py  hotkey.py  ipc.py  native_libs.py  output.py  platform.py  ui.py  worker.py
tests/: ibus-protocol.sh  test_config.py  test_hotkey.py  test_ipc.py  test_platform.py
tests/fixtures/: README.md  asr-availability.pcm
website/: .nojekyll  app.js  index.html  styles.css
