[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typeless-asr"
version = "0.1.0"
description = "Lightweight macOS and Linux voice input powered by doubaoime-asr"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "day253" }]
keywords = ["asr", "dictation", "voice-input", "macos", "linux"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: MacOS X",
  "Environment :: X11 Applications",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
  "doubaoime-asr @ git+https://github.com/yangmoling/doubaoime-asr.git@267972f815f519fd7c6149f85a8b7cc99daf61a5",
  "platformdirs>=4.2",
  "pynput>=1.7.7",
  "PySide6>=6.8,<7",
  "sounddevice>=0.5.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-cov>=6.0",
  "ruff>=0.9",
]
build = ["pyinstaller>=6.11"]

[project.scripts]
typeless-asr = "typeless_asr.__main__:main"

[project.urls]
Homepage = "https://github.com/day253/typeless"
Repository = "https://github.com/day253/typeless"
Issues = "https://github.com/day253/typeless/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
