[package]
name = "typeless-asr"
version = "0.2.0"
description = "macOS and Linux voice input"
authors = ["day253"]
license = "MIT"
edition = "2021"

[lib]
name = "typeless_asr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1"
arboard = "3.6.1"
cpal = "0.15.3"
futures-util = "0.3"
http = "1"
md5 = "0.8"
opus = "0.3.1"
prost = "0.14.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.5", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-global-shortcut = "2.3.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[target.'cfg(target_os = "linux")'.dependencies]
enigo = "0.2"

[profile.release]
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
